# meyes

./: .gitattributes  .gitignore  CHANGELOG.md  DESIGN.md  DEVELOPMENT_PLAN.md  JUDGES.md  LICENSE  MEYES_CODEX_SPEC.md  MVP_ACCEPTANCE.md  PRIVACY.md  README.md  SIGNING.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: windows-quality.yml
docs/: BUILD_WEEK_SUBMISSION.md  DEMO_RUNBOOK.md  DEMO_VOICEOVER.md  DEVPOST_DRAFT.md  TODO.md  YOUTUBE_DEMO.md
docs/changelog/: 2026-07-19-binding-action-foundation.md  2026-07-19-build-week-submission-readiness.md  2026-07-19-camera-core.md  2026-07-19-camera-dashboard.md  2026-07-19-face-observations.md  2026-07-19-fake-action-dispatcher.md  2026-07-19-hand-inference-worker.md  2026-07-19-hand-observations.md  2026-07-19-live-hand-temple-diagnostics.md  2026-07-19-planning-baseline.md  2026-07-19-qt-action-simulation.md  2026-07-19-repository-foundation.md  2026-07-19-safe-mode-diagnostics.md  2026-07-19-safe-profile-management.md  2026-07-19-temple-proximity-features.md  2026-07-19-temple-proximity-hysteresis.md  2026-07-19-temple-tap-hold-semantics.md  2026-07-19-wink-state-machine.md  2026-07-20-accepted-calibration-envelope.md  2026-07-20-accepted-cursor-pipeline-provisioning.md  2026-07-20-adaptive-cursor-smoothing.md  2026-07-20-bounded-calibration-collector.md  (+77 more)
scripts/: build_demo_video.py  build_release.ps1  capture_display_evidence.ps1  check.ps1  diagnose_install.ps1  generate_demo_voiceover.ps1  generate_icon_assets.py  judge_verify.ps1  mux_demo_in_browser.html  probe_demo_media.html  profile_safe.ps1  record_window.py  run_dev.ps1  submission_preflight.ps1  sync.ps1  test.ps1  uv_command.ps1  verify_docs.ps1  verify_icon_assets.ps1  verify_wheel.ps1
(+175 files in other folders)
