[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "meyes"
version = "0.1.0"
description = "Local-first hands-free mouse control for Windows"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "drestaputra" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "mediapipe>=0.10,<1",
  "numpy>=1.26,<3",
  "platformdirs>=4.3,<5",
  "pydantic>=2.10,<3",
  "pyside6>=6.8,<7",
]

[project.scripts]
meyes = "meyes.__main__:main"

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "pytest-qt>=4.4,<5",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meyes"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
minversion = "8.3"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["meyes"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["meyes"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["mediapipe.*", "pytestqt.*"]
ignore_missing_imports = true
